womtool/src/test/resources/validate/wdl_draft3/invalid/missing_subworkflow_input/subworkflow.wdl
version draft-3

workflow subwf {
  input {
    Int i
    Int j
    Int k = 5
  }
}
